Fixes/ui (#78)
* 🛠UI fixes + improvements

* 🛠more UI fixes

* 🛠header ui fixes

* 🛠 payment ui fixes

* 🛠header account popover ui fix

* 🛠Edit controller modal ui fix

* 🛠result card insight popover ui fix

* 🛠ui fixes for calculator

* 🛠connector position fix

* 🏗[WIP] Calculator fixes

* 🏗[WIP] Calculator state fix

* 🛠nominators tab ui fixes

* 🛠governance tab UI fix

* 🛠more nominators tab ui fixes

* ✂️truncated total staked amount

* increased padding for top nominators card

* 💵fiat conversion added from coingecko

* 🎉added number formatting + fiat conversion

* 💵added currency formatting

* 🎉added formatting for stash account balance in header + popover close on select

* close popup on network selection

* hotfix

* hotfix for payment UX transaction step

* fixed wrong amount issue in the final step for payment UX

* validator name UI fix on confirmation page

* risk tag spacing fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -49,6 +49,14 @@ input[type=number] {
 	min-width: 40rem;
 }
 
+.min-w-65-rem {
+	min-width: 65rem;
+}
+
+.min-w-max-content {
+	min-width: max-content;
+}
+
 .fade-top {
 	background-image: linear-gradient(
 		to bottom,
